force-app/main/default/objects/NI_Trust__c/NI_Trust__c.object-meta.xml
<CustomObject>
    <description>Parent object used in the AHTrust website that contains the platforms displayed to customers visiting the site.</description>
    <label>AH Trust</label>
    <nameField>
        <displayFormat>T-{00000}</displayFormat>
        <label>NI Trust Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AH Trust</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>