force-app/main/default/objects/NI_Trust__c/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>NICC-007128: Toggles the visibility of platform on the public NI Trust site.</description>
    <inlineHelpText>Toggles the visibility of platform on the public NI Trust site.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>