force-app/main/default/objects/NI_Trust__c/fields/Metric_Category__c.field-meta.xml
<CustomField>
    <fullName>Metric_Category__c</fullName>
    <label>Metric Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SaaS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>