force-app/main/default/objects/NI_Trust__c/fields/Platform_Name_External__c.field-meta.xml
<CustomField>
    <fullName>Platform_Name_External__c</fullName>
    <description>NICC-007128: External platform name that displays in public NI Trust site.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>External platform name that displays in public NI Trust site.</inlineHelpText>
    <label>External Platform Name</label>
    <length>225</length>
    <required>true</required>
    <type>Text</type>
</CustomField>