force-app/main/default/objects/NI_Trust__c/fields/Platform_Name_Internal__c.field-meta.xml
<CustomField>
    <fullName>Platform_Name_Internal__c</fullName>
    <description>NICC-007128: Internal platform name.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Internal platform name. Not seen on public NI Trust site.</inlineHelpText>
    <label>Internal Platform Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>