force-app/main/default/objects/NI_Trust__c/fields/Service_Level_Availability__c.field-meta.xml
<CustomField>
    <fullName>Service_Level_Availability__c</fullName>
    <label>Production Availability</label>
    <precision>6</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>