force-app/main/default/objects/NI_Trust__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Platform_Name_External__c</columns>
    <columns>Platform_Name_Internal__c</columns>
    <columns>Sort_Order__c</columns>
    <columns>IsActive__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <sharedTo>
        <group>NISFDCSysAdmin</group>
        <group>Trust_Admin</group>
    </sharedTo>
</ListView>