force-app/main/default/objects/NI_Trust__c/listViews/All_Platforms.listView-meta.xml
<ListView>
    <fullName>All_Platforms</fullName>
    <columns>NAME</columns>
    <columns>Platform_Name_External__c</columns>
    <columns>Platform_Name_Internal__c</columns>
    <columns>IsActive__c</columns>
    <columns>Sort_Order__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All Trust Platforms</label>
    <sharedTo>
        <group>Administrators</group>
        <group>NISFDCSysAdmin</group>
    </sharedTo>
</ListView>